Fixed orientation issue on mobile devices.

--- a/docs/chart.css
+++ b/docs/chart.css
@@ -240,7 +240,7 @@ input:disabled + .trigger:before {
 
 .chart_canvas {
 	width: 100%;
-	height: 475px;
+	height: 425px;
 	margin-bottom: 0.5rem;
 	overflow: hidden;
 	z-index: 0;
@@ -289,5 +289,15 @@ input:disabled + .trigger:before {
 
 	.chart_canvas {
 		height: 350px;
+	}
+}
+
+@media only screen and (max-height: 768px) {
+	.chart_canvas {
+		height: 300px;
+	}
+
+	.tool {
+		width: 45%;
 	}
 }
